Added team name and slogan to landing page

--- a/templates/addemp.html
+++ b/templates/addemp.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Add Employee Information</title>
+	<title>Team AWSome</title>
 </head>
 <center>
 	<font color="black" size="4" style="font-family: avenir">
 
+		<h1> We put the AWS in AWESOME </h1>
 		<h1 style="color: DodgerBlue">Employee Database</h1>
 		<body style="background: {{ color }};" >
 
