Add background image to landing page

--- a/templates/addemp.html
+++ b/templates/addemp.html
@@ -3,10 +3,11 @@
 <head>
 	<title>Team AWSome</title>
 </head>
-<center>
+<center style="background-image: url('https://blusignalsystems.com/wp-content/uploads/2016/12/Savin-NY-Website-Background-Web1.jpg');">
 	<font color="black" size="4" style="font-family: avenir">
 
-		<h1> We put the AWS in AWESOME </h1>
+		<h1> Team AWSome:</h1>
+		<h2> We put the AWS in AWESOME </h2>
 		<h1 style="color: DodgerBlue">Employee Database</h1>
 		<body style="background: {{ color }};" >
 
