--- a/templates/addemp.html
+++ b/templates/addemp.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Team AWSome</title>
+	<title>{{groupName}}</title>
 </head>
-<center style="background-image: url('https://blusignalsystems.com/wp-content/uploads/2016/12/Savin-NY-Website-Background-Web1.jpg');">
+<center style="background-image: url('{{ imageURL }}');">
 	<font color="black" size="4" style="font-family: avenir">
 
-		<h1> Team AWSome:</h1>
-		<h2> We put the AWS in AWESOME </h2>
+		<h1> {{groupName}}:</h1>
+		<h2> {{slogan}} </h2>
 		<h1 style="color: DodgerBlue">Employee Database</h1>
 		<body style="background: {{ color }};" >
 
