changing env to caps

--- a/templates/addemp.html
+++ b/templates/addemp.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{{groupName}}</title>
+	<title>{{GROUPNAME}}</title>
 </head>
-<center style="background-image: url('{{ imageURL }}');">
+<center style="background-image: url('{{ IMAGEURL }}');">
 	<font color="black" size="4" style="font-family: avenir">
 
-		<h1> {{groupName}}:</h1>
-		<h2> {{slogan}} </h2>
+		<h1> {{GROUPNAME}}:</h1>
+		<h2> {{SLOGAN}} </h2>
 		<h1 style="color: DodgerBlue">Employee Database</h1>
 		<body style="background: {{ color }};" >
 
