--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,22 @@
-<!doctype html>
-<title>Hello from Flask</title>
-<body style="background: {{ color }};"></body>
-<div style="color: #e4e4e4;
-    text-align:  center;
-    height: 90px;
-    vertical-align:  middle;">
-{% if name %}
-  <h1>Hello from {{ name }}!</h1>
-{% else %}
-  <h1>Hello From CLO835!</h1>
-{% endif %}
-
-  {% if contents %}
-  <textarea rows="10" cols="50">
-    {{ contents }}
-  </textarea>
+<!DOCTYPE html>
+<head>
+  <title>Hello from Flask</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body style="background-image: url('{{ IMAGEURL }}');" >
+  <div style="text-align:  center;
+      height: 90px;
+      vertical-align:  middle;">
+  {% if name %}
+    <h1>Hello from {{ name }}!</h1>
+  {% else %}
+    <h1>Hello From CLO835!</h1>
   {% endif %}
-
-</div>
+  
+    {% if contents %}
+    <textarea rows="10" cols="50">
+      {{ contents }}
+    </textarea>
+    {% endif %}
+  </div>
+</body>
