--- a/templates/addemp.html
+++ b/templates/addemp.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title>{{GROUPNAME}}</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<center style="background-image: url('{{ IMAGEURL }}');">
+<center>
 	<font color="black" size="4" style="font-family: avenir">
 
-		<h1> {{GROUPNAME}}:</h1>
+		<h1> {{GROUPNAME}}</h1>
 		<h2> {{SLOGAN}} </h2>
-		<h1 style="color: DodgerBlue">Employee Database</h1>
-		<body style="background: {{ color }};" >
+		<h3>Employee Database</h3>
+		<body style="background-image: url('{{ IMAGEURL }}');" >
 
 			<form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
 
