--- a/templates/addempoutput.html
+++ b/templates/addempoutput.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Add Employee</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <center>
-	<font color="DodgerBlue" size="5" style="font-family: avenir">
-		<body style="background: {{ color }};">
-			<h1>The employee {{ name }} wassuccessfully added to the database</h1><br>
-			<h2>The Employee has been added to the database</h2><br>
-			<h2>{{ name }}</h2><br>
-			<title>Add Emp Output</title>
-			<a href="{{ url_for('home') }}">Back</a>
-		</body>
-	</font>
+	<body style="background-image: url('{{ IMAGEURL }}');" >
+		<h1>The employee {{ name }} wassuccessfully added to the database</h1><br>
+		<h2>The Employee has been added to the database</h2><br>
+		<h2>{{ name }}</h2><br>
+		<title>Add Emp Output</title>
+		<a href="{{ url_for('home') }}">Back</a>
+	</body>
 </center>
 </head>
 <body>
